2011-05-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (prune-factor): New initialization parameter defaulting
	to 0.1.
	(registry-prune-hard): Use it.

	* gnus-registry.el (gnus-registry-fixup-registry): Set prune-factor to
	0.1 expicitly.

2011-05-13  Glenn Morris  <rgm@gnu.org>

	* message.el (message-send-mail-with-sendmail): Assume sendmail-program
	is bound, since this function requires sendmail.

2011-05-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-usage-test): Disable pruning test.

2011-05-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-prune-hard-candidates)
	(registry-prune-soft-candidates): Helper methods for registry pruning.
	(registry-prune): Use them.  Make the sort function optional.

2011-05-10  Jim Meyering  <meyering@redhat.com>

	* shr.el (shr-colorize-region): Fix typo "on on -> on".

2011-05-10  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-put-color-1): Do not bug out when old-props is a face
	symbol and not a list.

2011-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-mode): Move binding of
	shr-put-image-function here from gnus-article-prepare-display.

	* shr.el (shr-put-image-function): New variable.
	(shr-image-fetched, shr-image-displayer, shr-tag-img): Funcall it.
	(shr-put-image): Return scaled image.

	* gnus-art.el (gnus-shr-put-image): New function.
	(gnus-article-prepare-display): Bind shr-put-image-function to it.

	* gnus-html.el (gnus-html-wash-images): Register scaled images, not
	original ones, as deletable.

2011-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el (nntp-open-connection): Set TCP keepalive option.

2011-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-full): Add convenience method.  Fix logic.
	(registry-insert): Use it.  Fix logic here too.

	* gnus-registry.el (gnus-registry-insert): Add wrapper that calls
	`registry-prune' if `registry-full' returns t.
	(gnus-registry-handle-action)